--- a/assets/css/PC.css
+++ b/assets/css/PC.css
@@ -134,12 +134,34 @@ input:focus-within {
     background: var(--grey);
 }
 
+.header-navigation{
+    width: 800px;
+    margin: 50px auto -20px;
+    font-size: 17px;
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
+    display: flex;
+}
+
+.header-navigation a{
+    margin-right: 16px;
+}
+
 /**————————全站通用容器 A4纸样式————————**/
 .main {
    box-shadow: rgb(203, 208, 218) 0px 2px, rgba(48, 52, 63, 0.2) 0px 3px, rgba(48, 52, 63, 0.2) 0px 7px 7px, rgb(255, 255, 255) 0px 0px 0px 1px inset;
    width: 800px;
    margin:50px auto 0;
    background: var(--bg-white);
+}
+
+@media screen and (min-width: 1000px) {
+    .header-navigation{
+        width: 1000px;
+    }
+    .main {
+        width: 1000px;
+    }
 }
 
 /**按需左右留白**/
@@ -169,6 +191,8 @@ input:focus-within {
 
 a {
     text-decoration: none;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 a:link,a:visited {
@@ -221,6 +245,7 @@ blockquote {
     margin-bottom: 2em;
     color: var(--dark-grey);
     border-radius: 5px;
+    font-weight: bold;
 }
 
 blockquote:before {
@@ -564,7 +589,7 @@ button {
 /**返回顶部**/
 #gototop {
     position: fixed;
-    right: calc(((100% - 800px)/2) - 50px);
+    right: calc(((100% - 1000px)/2) - 60px);
     bottom: 12px;
     z-index: 999;
 }
