--- a/assets/css/Phone.css
+++ b/assets/css/Phone.css
@@ -83,6 +83,7 @@ html {
     width: 100%;
     padding: 0;
     -webkit-font-smoothing: antialiased;
+    font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, Cantarell, "Noto Sans", sans-serif;
 }
 
 /**————————全站通用HTML标签——————————————————————————————————————————————————————————————————————————————————————————**/
